<resources>
    <string name="app_name">Clockio</string>

    <string name="base_save">Save</string>
    <string name="base_cancel">Cancel</string>
    <string name="base_update">Update</string>
    <string name="base_delete">Delete</string>
    <string name="base_location">Location</string>
    <string name="base_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="search_hint">Type name ...</string>
    <string name="action_activity_history">Activity History</string>
    <string name="action_location_history">Location History</string>

    <!--    Navigation-->
    <string name="navigation_activity">Activity</string> <!-- Dashboard for User -->
    <string name="navigation_dashboard">Dashboard</string> <!-- Dashboard for Admin -->
    <string name="navigation_friend">Friend</string>
    <string name="navigation_checkin">Check In</string>
    <string name="navigation_checkout">Check Out</string>
    <string name="navigation_notif">Notification</string>
    <string name="navigation_profile">Profile</string>

    <!--    Login-->
    <string name="title_activity_login">Sign In</string>
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >3 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="title_activity_maps">Maps</string>
    <string name="title_activity_presence">Check In</string>

    <!--    Biometric Prompt-->
    <string name="biometric_title">Check In</string>
    <string name="biometric_subtitle">Confirm fingerprint to continue</string>
    <string name="biometric_failed">Fingerprint failed!</string>
    <string name="biometric_success">Fingerprint success!</string>

    <!--    BlurLockView-->
    <string name="blurlock_right_button">Backspace</string>
    <string name="blurlock_left_button"> </string>

    <!--    CameraX-->
    <string name="camera_capture">Capture</string>
    <string name="camera_switch_button_alt">Switch Camera</string>

    <!--    Location-->
    <string name="enable_gps">Please enable your GPS!</string>
    <string name="latLong">Latitude: %.3f, Longitude: %.3f</string>

    <!--    Permission-->
    <string name="camera_permission">Camera Permission not granted!</string>
    <string name="location_permission">Location permission not granted!</string>

    <!--    Hint-->
    <string name="employee_name">Full Name</string>
    <string name="employee_dept">Department</string>
    <string name="employee_last_checkin">Check In: %s</string>
    <string name="employee_checkin_loading_hint">Check In Loading ...</string>

    <!--    Status-->
    <string name="status">Status</string>
    <string-array name="status_array">
        <item>Online</item>
        <item>Meeting</item>
        <item>Away</item>
        <item>Offline</item>
    </string-array>

    <!--    Settings-->
    <string name="settings_pin_key">pin_key</string>
    <string name="settings_pin_default_value">1234</string>
    <string name="settings_pin_title">Set Pin Lock</string>
    <string name="settings_pin_dialog">Edit your pin lock</string>
    <string name="action_pin_incorrect">Password incorrect!</string>
    <string name="settings_pin_dialog_desc">Format: 4 numbers only</string>

    <!--    Activity-->
    <string name="activity_title">Activity Today</string>
    <string name="activity_create_title">What have you done today?</string>
    <string name="activity_title_hint">Activity Title</string>"
    <string name="activity_content_hint">Activity Content</string>
    <string name="activity_date_time_hint">Activity Date Time</string>
    <string name="activity_start_hint">Start Time</string>
    <string name="activity_end_hint">End Time</string>
    <string name="activity_not_available">No Activity Record</string>
    <string name="activity_history_date_hint">Start Date - End Date</string>

    <!--    Notification-->
    <string name="notif_no_result">No Notification Results</string>
    <string name="notif_create_title">Create Notification</string>
    <string name="notif_title_hint">Notif Title</string>
    <string name="notif_content_hint">Notif Contents</string>
    <string name="notif_location_hint">Location: </string>
    <string name="notif_start_hint">Start Date</string>
    <string name="notif_end_hint">End Date</string>
    <string name="notif_post_time">Posted: %s by %s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

<!--    Friend-->
    <string name="friend_loading_hint">Friend List Loading ...</string>

    <!--    Employee-->
    <string name="emp_add_title">Add Employee</string>
    <string name="emp_add_first_name_hint">First Name</string>
    <string name="emp_add_last_name_hint">Last Name</string>
    <string name="emp_add_department_hint">Department</string>
    <string name="emp_add_phone_hint">Phone</string>
    <string name="emp_add_email_hint">Email</string>
    <string name="emp_add_role_hint">Role</string>
    <string name="emp_add_user_hint">Create User</string>


</resources>
