<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_activity"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/navigation_activity" />

    <item
        android:id="@+id/navigation_friend"
        android:icon="@drawable/ic_people_black_24dp"
        android:title="@string/navigation_friend" />

    <item
        android:id="@+id/navigation_checkin"
        android:icon="@drawable/ic_alarm_black_24dp"
        android:title="@string/navigation_checkin" />

    <item
        android:id="@+id/navigation_notification"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/navigation_notification" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/navigation_profile" />
</menu>