<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="@dimen/card_vertical_margin">

    <TextView
        android:id="@+id/activityTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:hint="@string/activity_title_hint" />

    <TextView
        android:id="@+id/activityContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        style="@style/TextAppearance.MaterialComponents.Body2"
        android:hint="@string/activity_content_hint" />

    <TextView
        android:id="@+id/activityDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:textStyle="italic"
        android:hint="@string/activity_date_time_hint" />
</LinearLayout>