<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ui.ActivityDetailsFragment">

    <TextView
        android:id="@+id/activityTitleDetails"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/input_margin"
        android:hint="@string/activity_title_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/activityTimeDetailsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activityTitleDetails">
        <TableRow>
            <TextView
                style="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/activity_start_hint" />

            <TextView
                style="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/activity_end_hint" />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/activityStartDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/activity_start_hint" />

            <TextView
                android:id="@+id/activityEndDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/activity_end_hint" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/activityContentDetails"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="@dimen/input_margin"
        android:hint="@string/activity_content_hint"
        android:scrollbars="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityTimeDetailsLayout" />

    <FrameLayout
        android:id="@+id/activityMapDetails"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/input_margin"
        android:background="@color/colorPrimaryLight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activityContentDetails" />

</androidx.constraintlayout.widget.ConstraintLayout>