<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TableLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        xmlns:android="http://schemas.android.com/apk/res/android">
        <TableRow>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="@dimen/input_margin"
                android:hint="@string/notif_start_hint">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/startDateInput"
                    android:focusable="false"
                    android:background="@color/float_transparent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="@dimen/input_margin"
                android:hint="@string/activity_start_hint">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/startTimeInput"
                    android:focusable="false"
                    android:background="@color/float_transparent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>
        </TableRow>
        <TableRow>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="@dimen/input_margin"
                android:hint="@string/notif_end_hint">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/endDateInput"
                    android:focusable="false"
                    android:background="@color/float_transparent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="@dimen/input_margin"
                android:hint="@string/activity_end_hint">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/endTimeInput"
                    android:focusable="false"
                    android:background="@color/float_transparent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>
        </TableRow>
    </TableLayout>

</LinearLayout>