<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ui.ActivityAddFragment">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/activityTitleLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/input_margin"
        android:hint="@string/activity_title_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/activityTitleInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <TableLayout
        android:id="@+id/activityTimeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activityTitleLayout">
        <TableRow>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="@dimen/input_margin"
                android:hint="@string/activity_start_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activityStartInput"
                    android:focusable="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="@dimen/input_margin"
                android:hint="@string/activity_end_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activityEndInput"
                    android:focusable="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>
        </TableRow>
    </TableLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/activityContentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/input_margin"
        android:hint="@string/activity_content_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activityTimeLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/activityContentInput"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:inputType="textMultiLine"
            android:scrollbars="vertical"
            android:overScrollMode="ifContentScrolls" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/activityLocationLabel"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/base_location"
        android:layout_marginTop="@dimen/input_margin"
        android:layout_marginLeft="@dimen/input_margin"
        app:layout_constraintTop_toBottomOf="@id/activityContentLayout"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/activityMapInput"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/input_margin"
        android:background="@color/colorPrimaryLight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activityLocationLabel" />

</androidx.constraintlayout.widget.ConstraintLayout>